--- a/index.Rmd
+++ b/index.Rmd
@@ -30,7 +30,7 @@ To no surprise based on analysis from the first few questions, the year with the
 
 All of the data sets that were provided for this assignment were published by the Seattle Public Library (SPL.) Since this is a checkout database, it is most probable that the data used in these data sets is collected and compiled automatically whenever a book is checked out of the SPL system. One ethical concern that I have is the possibility of data being collected without informed consent. The library that I used to volunteer at combated this by allowing those who are registering for a new library card to opt out of data collection at the time of registration. I am unsure if this is a common practice or if SPL follows this guideline as well.
 
-As I've mentioned previously, the trend that I chose was **very** broad. I didn't have to worry about the limitations of this data set either for that reason. The only types of books that I considered in my project were books and e-books, both of which were present in this data set. I was additionally interested in the trends of e-book vs. book popularity from pre-pandemic, pandemic, and post-pandemic time frames. The data set spans from 2017 to 2023, so I didn't have to consider this possible constraint either. Overall, I am content with this data set and didn't find any shortcomings in it that could weaken my analysis.
+As I've mentioned previously, the trend that I chose was **very** broad. I didn't have to worry about the limitations of this data set either for that reason. The only types of books that I considered in my project were books and e-books, both of which were present in this data set. I was additionally interested in the trends of e-book vs. book popularity from pre-pandemic, pandemic, and post-pandemic time frames. The data set spans from 2017 to 2023, so I didn't have to consider this possible constraint either. The columns of this data set that I was interested in was the type of book (PRINT, EBOOK), the the checkout year for each item, and the number of checkouts. Then, the parameters (overall data description) that I analyzed was trends in book checkout and trends in e-book checkout. Overall, I am content with this data set and didn't find any shortcomings in it that could weaken my analysis.
 
 
 ### First Trends Over Time Chart
@@ -39,7 +39,7 @@ As I've mentioned previously, the trend that I chose was **very** broad. I didn'
 
 This chart displays the trend in the number of E-book checkouts over time versus the number of book checkouts from the years of 2017 to 2023. In the graph below, we see that E-books rose in checkout frequency steadily from 2017 to 2020. Additionally, from 2019 to 2020, books faced a steep decline in checkout frequency. The sharp decline in both books and E-books from 2022 to 2023 can be attributed to the fact that there is comparatively less checkout data for 2023 than other years, since the year has barely started. I included this chart because it is the simplest display to visualize the trend I was interested in. The chart is readable and pleasing to the eye because of its simplicity. It uses minimal information while still being able to project the trend I'm interested in.
 
-```{r, echo = FALSE, warning = FALSE, code = readLines("chart1.R")}
+```{r, echo = FALSE, warning = FALSE, code = readLines("chart1.R"), message = FALSE}
 ```
 
 ### Second Trends Over Time Chart
@@ -48,12 +48,12 @@ This chart displays the trend in the number of E-book checkouts over time versus
 
 This chart is a visual display of E-book to book checkout ratio from 2017 to 2023. From chart 1, we can easily visualize the trend of E-book vs. book checkouts, but it is still difficult to quantify the magnitude of the difference between checkout types. This is where a ratio comes to use. Then, plotting the ratio from each year helps us further understand how much more or less E-book checkouts were compared to book checkouts. A value of less than 1 correlates with the number of E-book checkouts being lower than book checkouts, whereas a value of greater than 1 correlates with the number of E-book checkouts being higher than book checkouts. As we can see, in 2020, the ratio is approximately 3, meaning that E-books were checked out three times more than books. This trend follows a normal (Gaussian) distribution.
 
-```{r, echo = FALSE, code = readLines("chart2.R")}
+```{r, echo = FALSE, code = readLines("chart2.R"), message = FALSE}
 ```
 
 ### Third Data Visualization
 
 I included this chart to visualize whether E-books or books are more frequently checked out on average. The results indicate that E-books are checked out more frequently checked out. This chart is a skewed representation of the trend due to a major outlier in E-book checkout frequency in 2020. I think that the difference in the averages would have been much more subtle if the data set covered more years past 2017. However, for the purposes of this project, I am satisfied with the inclusion of this chart. Ultimately, it is a simple and humanly designed chart that conveys key information from this data analysis.
 
-```{r, echo = FALSE, code = readLines("chart3.R")}
+```{r, echo = FALSE, code = readLines("chart3.R"), message = FALSE}
 ```
