--- a/index.Rmd
+++ b/index.Rmd
@@ -30,7 +30,7 @@ To no surprise based on analysis from the first few questions, the year with the
 
 All of the data sets that were provided for this assignment were published by the Seattle Public Library (SPL.) Since this is a checkout database, it is most probable that the data used in these data sets is collected and compiled automatically whenever a book is checked out of the SPL system. One ethical concern that I have is the possibility of data being collected without informed consent. The library that I used to volunteer at combated this by allowing those who are registering for a new library card to opt out of data collection at the time of registration. I am unsure if this is a common practice or if SPL follows this guideline as well.
 
-As I've mentioned previously, the trend that I chose was **very** broad. I didn't have to worry about the limitations of this data set either for that reason. The only types of books that I considered in my project were books and e-books, both of which were present in this data set. I was additionally interested in the trends of e-book vs. book popularity from pre-pandemic, pandemic, and post-pandemic time frames. The data set spans from 2017 to 2023, so I didn't have to consider this possible constraint either. The columns of this data set that I was interested in was the type of book (PRINT, EBOOK), the the checkout year for each item, and the number of checkouts. Then, the parameters (overall data description) that I analyzed was trends in book checkout and trends in e-book checkout. Overall, I am content with this data set and didn't find any shortcomings in it that could weaken my analysis.
+As I've mentioned previously, the trend that I chose was **very** broad. I didn't have to worry about the limitations of this data set either for that reason. The only types of books that I considered in my project were books and e-books, both of which were present in this data set. I was additionally interested in the trends of E-book vs. book popularity from pre-pandemic, pandemic, and post-pandemic time frames. The data set spans from 2017 to 2023, so I didn't have to consider this possible constraint either. The columns of this data set that I was interested in was the type of book (PRINT, EBOOK), the the checkout year for each item, and the number of checkouts. Then, the parameters (overall data description) that I analyzed was trends in book checkout and trends in e-book checkout. Overall, I am content with this data set and didn't find any shortcomings in it that could weaken my analysis.
 
 
 ### First Trends Over Time Chart
